@@ -702,7 +702,7 @@ public class NameGenerator
         if (!unmatchedOpen.isEmpty())
         {
             if (unmatchedOpen.size() == 1)
-                errors.add("No closing brace found for the substitution pattern starting at position " + unmatchedOpen.get(0) + ".");
+                errors.add("No closing brace found for the substitution pattern starting at position " + unmatchedOpen.getFirst() + ".");
             else
                 errors.add("No closing braces found for the substitution patterns starting at positions " + StringUtils.join(unmatchedOpen, ", ") + ".");
         }
@@ -809,7 +809,7 @@ public class NameGenerator
 
     public static boolean isParentLookup(List<String> fieldParts, @NotNull CaseInsensitiveHashMap<String> importAliases, @Nullable String currentDataTypeName, Container container, User user)
     {
-        if (!isParentInputToken(fieldParts.get(0), importAliases, false))
+        if (!isParentInputToken(fieldParts.getFirst(), importAliases, false))
             return false;
 
         return fieldParts.size() != 2 || !isParentInputWithDataType(fieldParts.toArray(String[]::new), currentDataTypeName, false, container, user);
@@ -817,13 +817,13 @@ public class NameGenerator
 
     public static boolean isAncestorSearch(List<String> fieldParts, @NotNull CaseInsensitiveHashMap<String> importAliases, Container container, User user)
     {
-        if (!fieldParts.get(0).startsWith("~"))
+        if (!fieldParts.getFirst().startsWith("~"))
             return false;
 
         if (fieldParts.size() == 1)
-            return importAliases.containsKey(fieldParts.get(0).substring(1));
+            return importAliases.containsKey(fieldParts.getFirst().substring(1));
 
-        if (!isParentInputToken(fieldParts.get(0), null, true))
+        if (!isParentInputToken(fieldParts.getFirst(), null, true))
             return false;
 
         return fieldParts.size() <= 3 && isParentInputWithDataType(fieldParts.subList(0, 2).toArray(String[]::new), null,true, container, user);
@@ -911,7 +911,7 @@ public class NameGenerator
             else if (ancestorPaths != null && !ancestorPaths.isEmpty())
             {
                 isAncestor = true;
-                Pair<ExpLineageOptions.LineageExpType, String> ancestorType = ancestorPaths.get(ancestorPaths.size() - 1);
+                Pair<ExpLineageOptions.LineageExpType, String> ancestorType = ancestorPaths.getLast();
                 isMaterial = ExpLineageOptions.LineageExpType.Material == ancestorType.first;
                 isData = ExpLineageOptions.LineageExpType.Data == ancestorType.first;
                 if (!StringUtils.isEmpty(ancestorType.second))
@@ -1205,7 +1205,7 @@ public class NameGenerator
 
                         if (_validateSyntax)
                         {
-                            String fieldName = fieldParts.get(0);
+                            String fieldName = fieldParts.getFirst();
                             if (isParentInputToken(fieldName, null, true))
                                 _syntaxErrors.add("Invalid substitution token. Ancestor " + (fieldName.toLowerCase().contains("material") ? "sample type" : "dataclass") + " must be specified in lineage search syntax: ${" + fieldName + "}.");
                             else if (!substitutionValues.contains(fieldName) && !isParentPart)
@@ -1247,7 +1247,7 @@ public class NameGenerator
                     String fieldKeyDisplay = QueryKey.decodePart(fkTok.toString());
                     if (isParentLookup || isAncestorSearch)
                     {
-                        String alias = fieldParts.get(0);
+                        String alias = fieldParts.getFirst();
                         boolean isParentAlias = importAliasFieldKeys != null && importAliasFieldKeys.containsKey(isAncestorSearch ? alias.substring(1) : alias);
 
                         Object lookupValuePreview = null;
@@ -1476,7 +1476,7 @@ public class NameGenerator
         {
             fieldParts.addAll(allFieldParts);
 
-            String alias = allFieldParts.get(0);
+            String alias = allFieldParts.getFirst();
             boolean isParentAlias = importAliases.containsKey(alias.substring(1));
             String isMaterialStr;
             String typeStr;
@@ -1506,7 +1506,7 @@ public class NameGenerator
             {
                 String dataTypeLsid = isMaterialAncestor ? sampleTypeLSIDs.get(typeStr) : dataClassLSIDs.get(typeStr);
                 Pair<ExpLineageOptions.LineageExpType, String> ancestorType = new Pair<>(isMaterialAncestor ? ExpLineageOptions.LineageExpType.Material : ExpLineageOptions.LineageExpType.Data, dataTypeLsid);
-                partAncestorOptions.put(fkTok, new NameExpressionAncestorPartOption(options, null, ancestorType, null, fieldParts.get(fieldParts.size() - 1)));
+                partAncestorOptions.put(fkTok, new NameExpressionAncestorPartOption(options, null, ancestorType, null, fieldParts.getLast()));
             }
             else
             {
@@ -1570,7 +1570,7 @@ public class NameGenerator
             String parentTypeName = null;
             if (parentParts.size() == 1) // alias, or one of Inputs/, MaterialInputs/, DataInputs/
             {
-                String alias = parentParts.get(0);
+                String alias = parentParts.getFirst();
                 boolean isParentAlias = importAliases.containsKey(alias);
                 if (isParentAlias)
                 {
@@ -1583,7 +1583,7 @@ public class NameGenerator
                 parentTypeName = parentParts.get(1);
             }
 
-            partAncestorOptions.put(fkTok, new NameExpressionAncestorPartOption(options, parentTypeName, null, ancestorPaths, allFieldParts.get(allFieldParts.size() - 1)));
+            partAncestorOptions.put(fkTok, new NameExpressionAncestorPartOption(options, parentTypeName, null, ancestorPaths, allFieldParts.getLast()));
         }
 
         return fieldParts;
@@ -1928,7 +1928,7 @@ public class NameGenerator
             ArrayList<StringExpressionFactory.StringPart> parts = getParsedExpression();
             if (parts.size() == 1)
             {
-                StringExpressionFactory.StringPart part = parts.get(0);
+                StringExpressionFactory.StringPart part = parts.getFirst();
                 try
                 {
                     if (part instanceof CounterExpressionPart counterExpressionPart)
@@ -2007,13 +2007,6 @@ public class NameGenerator
         public Object getToken()
         {
             return _prefixExpression;
-        }
-
-        @NotNull
-        @Override
-        public Collection<SubstitutionFormat> getFormats()
-        {
-            return Collections.emptyList();
         }
 
         @Override
@@ -2107,12 +2100,6 @@ public class NameGenerator
         public FieldKeyStringExpression getParsedNameExpression()
         {
             return _parsedNameExpression;
-        }
-
-        @Override
-        public boolean hasSideEffects()
-        {
-            return false;
         }
 
         @Override
@@ -2536,7 +2523,7 @@ public class NameGenerator
 
                 assertEquals(1, parsedExpressions.size());
                 assertEquals(2, se.getDeepParsedExpression().size());
-                assertTrue(parsedExpressions.get(0) instanceof NameGenerator.CounterExpressionPart);
+                assertTrue(parsedExpressions.getFirst() instanceof NameGenerator.CounterExpressionPart);
 
                 String s = se.eval(m);
                 assertEquals("S100.1", s);
@@ -2552,7 +2539,7 @@ public class NameGenerator
 
                 assertEquals(1, parsedExpressions.size());
                 assertEquals(4, se.getDeepParsedExpression().size());
-                assertTrue(parsedExpressions.get(0) instanceof NameGenerator.CounterExpressionPart);
+                assertTrue(parsedExpressions.getFirst() instanceof NameGenerator.CounterExpressionPart);
 
                 String s = se.eval(m);
                 assertEquals("S100.mouse1.1", s);
@@ -2599,7 +2586,7 @@ public class NameGenerator
 
                 assertEquals(1, parsedExpressions.size());
                 assertEquals(2, se.getDeepParsedExpression().size());
-                assertTrue(parsedExpressions.get(0) instanceof NameGenerator.CounterExpressionPart);
+                assertTrue(parsedExpressions.getFirst() instanceof NameGenerator.CounterExpressionPart);
 
                 String s = se.eval(m);
                 assertEquals("S100_1", s);
@@ -2617,8 +2604,8 @@ public class NameGenerator
 
                 assertEquals(1, parsedExpressions.size());
                 assertEquals(2, se.getDeepParsedExpression().size());
-                assertTrue(parsedExpressions.get(0) instanceof NameGenerator.CounterExpressionPart);
-                NameGenerator.CounterExpressionPart counterPart = (NameGenerator.CounterExpressionPart) parsedExpressions.get(0);
+                assertTrue(parsedExpressions.getFirst() instanceof NameGenerator.CounterExpressionPart);
+                NameGenerator.CounterExpressionPart counterPart = (NameGenerator.CounterExpressionPart) parsedExpressions.getFirst();
                 assertEquals((Integer) 101, counterPart._startIndex);
 
                 String s = se.eval(m);
@@ -2635,7 +2622,7 @@ public class NameGenerator
 
                 assertEquals(1, parsedExpressions.size());
                 assertEquals(2, se.getDeepParsedExpression().size());
-                assertTrue(parsedExpressions.get(0) instanceof NameGenerator.CounterExpressionPart);
+                assertTrue(parsedExpressions.getFirst() instanceof NameGenerator.CounterExpressionPart);
 
                 String s = se.eval(m);
                 assertEquals("S100...0111", s);
